--- a/after/index.html
+++ b/after/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    <h1> Hello </h1>
+    <h1> Hello World!!</h1>
     <script src="js\jquery-3.6.0.min.js"></script>
     <script src="js\bootstrap.min.js"></script>
     <script src="js\script.js"></script>
