--- a/after/index.html
+++ b/after/index.html
@@ -7,6 +7,8 @@
 	<title> David Chu's China Bistro</title>
     <link rel="stylesheet" href="css\bootstrap.min.css">
     <link rel="stylesheet" href="css\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <h1> Hello World!!</h1>
