Added navigation bar

--- a/after/index.html
+++ b/after/index.html
@@ -11,7 +11,13 @@
     
 </head>
 <body>
-    <h1> Hello World!!</h1>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+
+            </div>
+        </nav>
+    </header>
     <script src="js\jquery-3.6.0.min.js"></script>
     <script src="js\bootstrap.min.js"></script>
     <script src="js\script.js"></script>
