--- a/after/index.html
+++ b/after/index.html
@@ -18,6 +18,14 @@
                     <a href="index.html" class="">
                         <div id="logo-img" alt="Logo image"></div>
                     </a>
+
+                    <div class="navbar-brand">
+                        <a href="index.html"><h1> David Chu's China Bistro</h1></a>
+                        <p>
+                            <img src="https://usmile581.github.io/Bistro_Restaurant/images/star-k-logo.png" alt="Kosher certification">
+                            <span> Kosher Certified </span>
+                        </p>
+                    </div>
                 </div>
 
             </div>
